fix(zen-tabs): prevent selected tab jumping
- bold text takes more space
- use text shadow to achieve similar bold effect

--- a/src/components/zen-tab/zen-tab.scss
+++ b/src/components/zen-tab/zen-tab.scss
@@ -9,6 +9,7 @@
   border-bottom: 4px solid transparent;
   color: $color-gray-400;
   font-size: $text-md;
+  letter-spacing: 0.5px;
 
   ::slotted(*) {
     color: $color-gray-400;
@@ -22,5 +23,5 @@
 :host([selected]) {
   border-bottom: 4px solid $color-blue-700;
   color: $color-gray-800;
-  font-weight: bold;
+  text-shadow: 1px 0 $color-gray-800;
 }
